# TradeAuto

./: .gitignore  .vercelignore
2026-04-26/role-and-objective-deploy-and-harden/: .env.example  .env.live.example  .env.paper.example  .env.test.example  .gitignore  .telegrambotupdate.txt  AGENTS.md  README.md  pyproject.toml
2026-04-26/role-and-objective-deploy-and-harden/config/: strategies.yaml
2026-04-26/role-and-objective-deploy-and-harden/docs/: NJALLA_VPS_DEPLOYMENT.md
2026-04-26/role-and-objective-deploy-and-harden/mcp/: AGENTS.md  README.md
2026-04-26/role-and-objective-deploy-and-harden/memory/: README.md
2026-04-26/role-and-objective-deploy-and-harden/ops/: AGENTS.md
2026-04-26/role-and-objective-deploy-and-harden/policies/: deployment-rules.md  destructive-action-rules.md  live-trading-rules.md  pre_live_strategy_gate.md
2026-04-26/role-and-objective-deploy-and-harden/research/: README.md
2026-04-26/role-and-objective-deploy-and-harden/scripts/: AGENTS.md  alpaca_account.sh  alpaca_cancel_all.sh  alpaca_clock.sh  alpaca_doctor.sh  alpaca_orders.sh  alpaca_positions.sh  dashboard_proxy_smoke.sh  deploy.sh  rollback.sh  telegram_test.sh  validate_env.py
2026-04-26/role-and-objective-deploy-and-harden/tests/: test_alpaca_broker.py  test_alpaca_cli_profile_flags.py  test_health_readiness.py  test_live_strategy_runner.py  test_paper_strategy_runner.py  test_repo_hygiene.py  test_risk_engine.py  test_strategy_risk_gates.py  test_strategy_scoring.py  test_telegram_bot.py  test_validate_env.py
(+198 files in other folders)
